kubernetes/apps/network/traefik/config/ingress-routes/traefik-external/ingressroute-tautulli.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  annotations:
    external-dns.alpha.kubernetes.io/target: haynesnetwork.com
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tautulli.haynesnetwork.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: haynestower
          port: 8181
      middlewares:
        - name: default-headers
  tls:
    secretName: certificate-haynesnetwork.com
