kubernetes/apps/network/traefik/config/ingress-routes/traefik-external/ingressroute-traefik-external-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-external-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: external.haynesops
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-external.haynesops.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-dashboard-basicauth
  tls:
    secretName: certificate-haynesops
